Redispatch beforeinstallprompt event on installation cancellation or failure.

This resends the beforeinstallprompt event when kExperimentalAppBanners is
enabled, and:
  * the install dialog is cancelled, or
  * the app fails to install.

When kExperimentalAppBanners is enabled, we currently reprompt when the install
banner is dismissed. However, a subsequent CL will skip the install banner and
launch the confirmation dialog directly, so dismissal of the install banner is
not the appropriate juncture to reprompt.

Bug: 789384
Change-Id: I681af00e56a946272414841da06767b6e9878dab
Reviewed-on: https://chromium-review.googlesource.com/784652
Commit-Queue: Michael McGreevy <mcgreevy@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520313}
Former-commit-id: 842166c48c6bf7b914418cb997ff14872e540331